Fix inline-block abspos bug

Fix inline-block abspos bug
https://bugs.webkit.org/show_bug.cgi?id=249391

Reviewed by NOBODY (OOPS!).

This patch is to align Webkit with Blink / Chromium and Gecko / Firefox.

Merge - https://chromium.googlesource.com/chromium/blink/+/b1dbd0d86f09b9dccd410d1d106c76f029fa5b48

When an out-of-flow-positioned element changes its display between block and
inline-block, then an incremental layout on the element's containing block lays
out the element through LayoutPositionedObjects, which skips laying out the
element's parent. The element's parent needs to relayout so that it calls
RenderBlockFlow::setStaticInlinePositionForChild with the out-of-flow-positioned
child, so that when it's laid out, its
RenderBox::computePositionedLogicalWidth/Height takes into account its new
inline/block position rather than its old block/inline position.

* Source/WebCore/rendering/RenderLayerModelObject.cpp:
(RenderLayerModelObject::styleDidChange):
- Add Comment
- Add function to do layout update on conditions of changes between inline/block
* LayoutTests/fast/block/positioning/bug369123.html: Add Test Case
* LayoutTests/fast/block/positioning/bug369123-expected.html: Add Test Case Expectation